# worg

./: autogen.sh  configure.ac
src/: Makefile.am  activity-model.cc  activity-model.h  activity_model.h  application.cc  application.h  client.cc  db-query.h  db-schema.h  db.cc  db.h  error.h  fileconfig.h  log.h  main.cc  schema.sql  sqlist.cc  ui-menu.glade  ui-new-activity.glade  ui-popup-menu.cc  ui-popup-menu.h  ui.cc  ui.glade  ui.h
